--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fold-args",
-  "version": "1.0.1",
-  "description": "a named arguments parser with a consistent robust protocol; via `folding` JavaScript argumenets in the sense of the computer language Scheme",
+  "version": "1.0.2",
+  "description": "a named arguments parser with a consistent robust protocol for JavaScript; via `folding` argumenets in the sense of the computer language Scheme",
   "main": "index.mjs",
   "type": "module",
   "exports": {
