no more npm run make; evacuate dependency to sqlmacro to bak
- no more npm run make; include compiled cjs/mjs to the repository.
- evacuate dependency to sqlmacro to bak.

--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "url": "https://github.com/a-oka-z/fold-args"
   },
   "license": "ISC",
-  "devDependencies": {
+  "bak-devDependencies": {
     "sqlmacro": "^0.1.0"
+  },
+  "devDependencies": {
   }
 }
